<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="Apropos de nous "
        app:showAsAction="never" />

    <item
        android:id="@+id/action_change_password"
        android:orderInCategory="100"
        android:title="@string/action_change_password"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_deconnexion"
        android:orderInCategory="100"
        android:title="@string/action_deconnexion"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_quitter"
        android:orderInCategory="100"
        android:title="@string/action_quitter"
        app:showAsAction="never" />
</menu>
