<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFullBackGroundFragment"
    tools:context="layout.AboutView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <ImageView
            android:id="@+id/ivLogoOnAbout"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:layout_weight="0.62"
            android:contentDescription="@string/imgLogo"
            app:srcCompat="@mipmap/logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="0.05"
            android:gravity="center"
            android:text="@string/tv_entreprise"
            android:textColor="@color/colorInfoAbout"
            android:textSize="36sp"
            android:textStyle="bold" />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/tv_description_app"
            android:textStyle="bold" />


    </LinearLayout>

</FrameLayout>
