<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    tools:context=".layout.AboutView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="#FFF"
        android:orientation="vertical"
        android:textAlignment="center">


        <ImageView
                    android:id="@+id/img_logo"
                    android:layout_width="match_parent"
                    android:layout_height="185px"
                    android:src="@mipmap/logo" />

        <TextView
                    android:id="@+id/tv_title_add_stock"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Facture"
                    android:textAlignment="center"
                    android:textColor="@color/colorBackgrounLayoutBleu1" />

        <TextView
            android:id="@+id/tv_facture_agence_ben"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="15px"
            android:layout_marginRight="15px"
            android:text="Béneficiaire " />

        <LinearLayout
            android:id="@+id/ll_facture_add_agence_ben"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#f0f0fa"
            android:padding="3dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical"
                >
                <TextView
                    android:id="@+id/tv_facture_add_agence_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17dp"
                    android:textColor="#FF0000"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/tv_facture_add_agence_proprietaire"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:textColor="#0000FF"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_facture_add_produit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="15px"
            android:layout_marginRight="15px"
            android:text="Opération " />

        <LinearLayout
            android:id="@+id/ll_facture_add_produit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#f0f0fa"
            android:padding="3dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical"
                >
                <TextView
                    android:id="@+id/tv_facture_add_produit_designation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17dp"
                    android:textColor="#FF0000"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/tv_facture_add_produit_devise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:textColor="#0000FF"/>
            </LinearLayout>
        </LinearLayout>

       <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="15px"
            android:layout_marginRight="15px"
            android:text="Date"
            />
       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           >
           <Button
               android:id="@+id/btn_facture_add_date"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="left"
               android:layout_weight="1"
               android:textSize="10dp"
               android:text="@string/btn_date_selection" />
           <TextView
               android:id="@+id/tv_facture_add_date"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textAlignment="center"
               android:layout_margin="15dp"
               android:textStyle="bold"/>
       </LinearLayout>

        <TextView
                    android:id="@+id/tv_facture_article"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="15px"
                    android:layout_marginRight="15px"
                    android:text="Article  " />

        <LinearLayout
               android:id="@+id/ll_facture_add_article_produit"
               android:layout_width="match_parent"
               android:layout_height="50dp"
               android:background="#f0f0fa"
               android:orientation="vertical"
               android:padding="3dp">

               <LinearLayout
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center_vertical"
                   android:orientation="vertical">

                   <TextView
                       android:id="@+id/tv_facture_add_article_produit_description"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:textColor="#f413dc"
                       android:textSize="17dp"
                       android:textStyle="bold" />

                   <TextView
                       android:id="@+id/tv_facture_add_article_produit_fournisseur"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:textSize="15dp"
                       android:textStyle="bold"
                       android:textColor="#0000FF" />
               </LinearLayout>
           </LinearLayout>
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#dce4f0"
            android:orientation="horizontal"
            android:padding="5dp">
            <TextView
                android:id="@+id/tv_facture_add_stock_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#f2520b"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_marginRight="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#f20be4"
                android:text="En stock"/>
        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

            <EditText
                android:id="@+id/at_facture_add_quantite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Quantite ..."
                android:inputType="number"
                android:maxLines="1"
                android:enabled="false"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="5dp">

    <TextView
        android:id="@+id/tv_facture_add_montant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Montant : 0 Fc"
        />

</LinearLayout>

        <TextView
            android:id="@+id/tv_facture_article_bonus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="15px"
            android:layout_marginRight="15px"
            android:text="Article du bonus " />

        <LinearLayout
            android:id="@+id/ll_facture_add_article_bonus"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#f0f0fa"
            android:orientation="vertical"
            android:padding="3dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_facture_add_article_bonus_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#f413dc"
                    android:textSize="17dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_facture_add_article_bonus_fournisseur"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:textColor="#0000FF" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#dce4f0"
            android:orientation="horizontal"
            android:padding="5dp">
            <TextView
                android:id="@+id/tv_facture_add_stock_article_bonus_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#f2520b"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_marginRight="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#f20be4"
                android:text="En stock"/>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_facture_bonus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <AutoCompleteTextView
                        android:id="@+id/at_facture_add_bonus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Quantité Bonus ..."
                        android:inputType="number"
                        android:maxLines="1"
                        android:enabled="false"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/bt_facture_add_line"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_gravity="center"
            android:textColor="@color/colorButtonDefault"
            android:text="@string/btn_add_insert" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textSize="7dp"
                android:text="@string/article"/>

            <TextView
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:textSize="7dp"
                android:text="@string/quantite"/>

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:textSize="7dp"
                android:text="@string/article_bonus"/>

            <TextView
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:textSize="7dp"
                android:text="@string/quantite_bonus"/>

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:textSize="7dp"
                android:text="@string/montant_net"/>
        </LinearLayout>


        <ListView
            android:id="@+id/lv_facture_add_lignes"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:addStatesFromChildren="false"
            android:animateLayoutChanges="true"
            android:choiceMode="multipleChoiceModal"
            android:drawSelectorOnTop="false"
            android:headerDividersEnabled="false"
            android:orientation="vertical"
            />
        <TextView
            android:id="@+id/tv_facture_add_montant_net_total"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:textSize="7dp"
            android:textAlignment="center"/>
        <Button
            android:id="@+id/bt_facture_add_valider"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_gravity="center"
            android:textColor="@color/colorButtonDefault"
            android:text="@string/btn_valider" />

    </LinearLayout>
</ScrollView>
